// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/error_page/ErrorTitle should match snapshot, channel_not_found type 1`] = `
<div>
  <span>
    Channel Not Found
  </span>
</div>
`;

exports[`components/error_page/ErrorTitle should match snapshot, local_storage type 1`] = `
<div>
  <span>
    Cannot Load Mattermost
  </span>
</div>
`;

exports[`components/error_page/ErrorTitle should match snapshot, no type but with title 1`] = `
<div>
  error title
</div>
`;

exports[`components/error_page/ErrorTitle should match snapshot, no type nor title 1`] = `
<div>
  <span>
    Error
  </span>
</div>
`;

exports[`components/error_page/ErrorTitle should match snapshot, oauth_access_denied type 1`] = `
<div>
  <span>
    Authorization Error
  </span>
</div>
`;

exports[`components/error_page/ErrorTitle should match snapshot, oauth_invalid_param type 1`] = `
<div>
  <span>
    OAuth Parameter Error
  </span>
</div>
`;

exports[`components/error_page/ErrorTitle should match snapshot, oauth_invalid_redirect_url type 1`] = `
<div>
  <span>
    OAuth Parameter Error
  </span>
</div>
`;

exports[`components/error_page/ErrorTitle should match snapshot, oauth_missing_code type 1`] = `
<div>
  <span>
    Mattermost Needs Your Help
  </span>
</div>
`;

exports[`components/error_page/ErrorTitle should match snapshot, page_not_found type 1`] = `
<div>
  <span>
    Page Not Found
  </span>
</div>
`;

exports[`components/error_page/ErrorTitle should match snapshot, permalink_not_found type 1`] = `
<div>
  <span>
    Message Not Found
  </span>
</div>
`;

exports[`components/error_page/ErrorTitle should match snapshot, team_not_found type 1`] = `
<div>
  <span>
    Team Not Found
  </span>
</div>
`;
